# vortex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_history.sh
.staging/benches/: performance_benchmarks.rs
.staging/src/: config.rs  lib.rs
.staging/src/engine/: mod.rs
.staging/src/hnsw/: node.rs  search.rs
.staging/src/storage/: mock.rs
.staging/src/vectors/: format.rs
.staging/tests/: acid_tests.rs  edge_case_tests.rs  error_handling_tests.rs  latency_profiling_tests.rs
.staging/tests/common/: mod.rs
benches/: performance_benchmarks.rs  search_benchmark.rs
docs/: CLOUD_TESTING.md
src/: config.rs  defaults.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/engine/: mod.rs
src/hnsw/: insert.rs  mod.rs  persistence.rs
src/index/: config.rs  diskann.rs  hnsw_adapter.rs  mod.rs  trait.rs
src/simulation/: mod.rs
src/storage/: mock.rs  mod.rs  types.rs
src/storage/aws/: cleanup.rs  ec2.rs  mod.rs  s3.rs
src/tenant/: mod.rs
src/vectors/: format.rs  mod.rs
src/wal/: entry.rs  mod.rs  reader.rs
tests/: acid_tests.rs  concurrency_tests.rs  correctness_stress_tests.rs  crash_recovery_tests.rs  edge_case_tests.rs  error_handling_tests.rs  latency_profiling_tests.rs  stress_tests.rs  workload_simulation_tests.rs
tests/common/: mod.rs
